Created base layout in pug files

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,6 +1,7 @@
-doctype html
-html(lang='ru-RU')
-  head
-    title Ksucta Shop
-  body
-    p Интернет-магазин
+extends ../layout/main-layout
+
+block variables
+	- var pageTitle = 'KSUCTA - online shop'
+
+block content
+  
