--- a/src/static/scss/main.scss
+++ b/src/static/scss/main.scss
@@ -4,5 +4,7 @@
 @import 'mixins';
 @import 'interface'; // Import body, titles, buttons styles
 
+@import './layout-parts/main-search';
+
 
 @import 'media';
