--- a/src/static/scss/_mixins.scss
+++ b/src/static/scss/_mixins.scss
@@ -7,4 +7,15 @@
 	padding: 0;
 	margin: 0;
 }
-	
+
+@mixin textEllipsis {
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+}
+
+@mixin gradientColor {
+	background: #4568DC;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #B06AB3, #4568DC);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #B06AB3, #4568DC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}	
