Added layout for header

--- a/src/pug/modules/header.pug
+++ b/src/pug/modules/header.pug
@@ -1,2 +1,21 @@
 header.header
+	nav.top-nav.header--top
+		.container
+			ul.top-nav__list
+				li.menu-item
+					a(href="#") Item#1
+				li.menu-item
+					a(href="#") Item#1
+	.header--center
+		.container
+			.row.justify-content-between
+				.col-3
+					.header__logo
+						a(href="")
+							.header__logo-title KSUCTA SHOP
+								span online shop
+				.col-9
+					.row.justify-content-end
+						.col
+							
 	include ./main-search
