--- a/src/static/scss/_interface.scss
+++ b/src/static/scss/_interface.scss
@@ -19,6 +19,11 @@ button, input, textarea {
   outline: none !important;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+}
+
 .content-wrapper {
   z-index: 1;
 }
