--- a/src/static/scss/main.scss
+++ b/src/static/scss/main.scss
@@ -4,6 +4,7 @@
 @import 'mixins';
 @import 'interface'; // Import body, titles, buttons styles
 
+@import './layout-parts/header';
 @import './layout-parts/main-search';
 
 
