--- a/src/static/scss/main.scss
+++ b/src/static/scss/main.scss
@@ -3,6 +3,7 @@
 @import 'fonts';
 @import 'mixins';
 @import 'interface'; // Import body, titles, buttons styles
+@import 'flex';
 
 @import './layout-parts/header';
 @import './layout-parts/main-search';
