--- a/src/pug/layout/main-layout.pug
+++ b/src/pug/layout/main-layout.pug
@@ -9,9 +9,10 @@ html(lang="en")
 		link(href="css/main.css" rel="stylesheet")
 		title= pageTitle
 	body
-		div.content-wrapper
+		.page-wrapper
 			include ../modules/header
-			block content
+			.content-wrapper
+				block content
 			include ../modules/footer
 
 		script(src="js/libs.min.js")
