Corrected base styles and markup

--- a/src/pug/modules/header.pug
+++ b/src/pug/modules/header.pug
@@ -3,9 +3,13 @@ header.header
 		.container
 			ul.top-nav__list
 				li.menu-item
-					a(href="#") Item#1
+					a(href="#") Каталог
 				li.menu-item
-					a(href="#") Item#1
+					a(href="#") Доставка и оплата
+				li.menu-item
+					a(href="#") Обратная связь
+				li.menu-item
+					a(href="#") Контакты
 	.header--center
 		.container
 			.row.justify-content-between
