--- a/src/pug/modules/main-search.pug
+++ b/src/pug/modules/main-search.pug
@@ -24,12 +24,12 @@
             input(type="text" value="" name="s" placeholder="Поиск товара по названию...")
             .main-search__form-field-clear Очистить
             .main-search__form-field-result
-              ul.main-search__form-field-result-list
-                li.main-search__form-field-result-item По данному
-                li.main-search__form-field-result-item По данному
-                li.main-search__form-field-result-item По данному
-                li.main-search__form-field-result-item
-                  a(href="#") По данному
+              //- ul.main-search__form-field-result-list
+              //-   li.main-search__form-field-result-item По данному
+              //-   li.main-search__form-field-result-item По данному
+              //-   li.main-search__form-field-result-item По данному
+              //-   li.main-search__form-field-result-item
+              //-     a(href="#") По данному
           button.main-search__form-submit Поиск
           
           
