--- a/src/static/scss/_interface.scss
+++ b/src/static/scss/_interface.scss
@@ -9,6 +9,13 @@ body, html {
   line-height: 1;
   width: 100%;
   height: 100vh;
+  
+}
+
+body {
+  overflow: auto;
+  overflow-x: hidden;
+  @include scrollbar(7px, auto);
 }
 
 button, input, textarea {
@@ -29,8 +36,17 @@ svg {
   fill: $accent;
 }
 
-.content-wrapper {
+.page-wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
   z-index: 1;
+}
+
+.content-wrapper {
+  flex: 1;
+  height: 100%;
 }
 
 .overlay {
@@ -42,7 +58,7 @@ svg {
   opacity: 0;
   width: 100%;
   height: 100%;
-  z-index: -1;
+  z-index: 5;
   background-color: rgba(0, 0, 0, 0.35);
   pointer-events: none;
   transition: all .2s ease;
