--- a/src/static/scss/_mixins.scss
+++ b/src/static/scss/_mixins.scss
@@ -18,4 +18,24 @@
 	background: #4568DC;  /* fallback for old browsers */
 	background: -webkit-linear-gradient(to right, #B06AB3, #4568DC);  /* Chrome 10-25, Safari 5.1-6 */
 	background: linear-gradient(to right, #B06AB3, #4568DC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-}	
+}
+
+@mixin scrollbar($width, $height) {
+  &::-webkit-scrollbar-button {display:none}
+  &::-webkit-scrollbar-thumb {
+    background-color:$accent;
+    border-radius: 1.5px;
+    border: 4px solid transparent;
+    min-height: 35px;
+    &:active, &:hover {
+      background-color: darken($accent, 10%);
+    }
+  }
+  &::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+  &::-webkit-scrollbar {
+    width: $width;
+    height: $height;
+  }
+}
