--- a/src/pug/layout/main-layout.pug
+++ b/src/pug/layout/main-layout.pug
@@ -6,13 +6,15 @@ html(lang="en")
 		meta(charset="utf-8")
 		meta(http-equiv="X-UA-Compatible" content="IE=edge")
 		meta(name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1")
+		<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap" rel="stylesheet">
+		
 		link(href="css/main.css" rel="stylesheet")
 		title= pageTitle
 	body
 		.page-wrapper
 			include ../modules/header
 			.content-wrapper
-				block content
+				block content		
 			include ../modules/footer
 
 		script(src="js/libs.min.js")
