Added markup and styles for account page

--- a/src/static/scss/main.scss
+++ b/src/static/scss/main.scss
@@ -7,6 +7,8 @@
 
 @import './layout-parts/header';
 @import './layout-parts/main-search';
+@import './layout-parts/product-card';
+@import './layout-parts/account-page';
 @import './layout-parts/footer';
 
 
