--- a/src/static/scss/_interface.scss
+++ b/src/static/scss/_interface.scss
@@ -9,7 +9,7 @@ body, html {
   line-height: 1;
   width: 100%;
   height: 100vh;
-  
+  font-family: 'Nunito', sans-serif;
 }
 
 body {
@@ -24,6 +24,11 @@ button, input, textarea {
   padding: 0;
   margin: 0;
   outline: none !important;
+}
+
+p {
+  padding: 0;
+  margin: 0;
 }
 
 img {
@@ -45,6 +50,7 @@ svg {
 }
 
 .content-wrapper {
+  padding: rem(60px) 0;
   flex: 1;
   height: 100%;
 }
@@ -62,4 +68,55 @@ svg {
   background-color: rgba(0, 0, 0, 0.35);
   pointer-events: none;
   transition: all .2s ease;
+}
+
+.section-header {
+  margin-bottom: rem(40px);
+  &--align-center {
+    text-align: center;
+  }
+  &--align-right {
+    text-align: right;
+  }
+  &--align-left {
+    text-align: left;
+  }
+  &__title {
+    font-size: rem(32px);
+    font-weight: 700;
+  }
+  &__description {
+    color: #666;
+    font-size: rem(14px);
+  }
+  &::after {
+    content: '';
+    display: block;
+    height: 1px;
+    width: 100%;
+    @include gradientColor;
+    margin-top: 15px;
+  }
+}
+
+.alert {
+  @include notList;
+  padding: rem(15px) rem(25px);
+  margin-bottom: rem(40px);
+  li {
+    font-size: rem(14px);
+    margin-bottom: rem(5px);
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+  &--error {
+    border: solid 1px #de4e4e;
+    background-color: #fff0f0;
+    color: #830b0b;
+  }
+  &--notice {
+    border: solid 1px #54c5bb;
+    background-color: #effffe;
+  }
 }
