Corrected styles for header and footer

--- a/src/static/scss/layout-parts/header.scss
+++ b/src/static/scss/layout-parts/header.scss
@@ -20,6 +20,7 @@
         min-height: rem(36px);
         padding: rem(12px);
         text-decoration: none;
+        font-size: rem(14px);
       }
     }
   }
