--- a/src/static/scss/layout-parts/footer.scss
+++ b/src/static/scss/layout-parts/footer.scss
@@ -5,9 +5,10 @@
     border-bottom: 1px solid #eee;
     .widget {
       &-title {
+        font-size: rem(16px);
         font-weight: 500;
-        font-size: rem(18px);
         margin-bottom: rem(15px);
+        font-weight: 600;
       }
       ul {
         @include notList;
@@ -17,6 +18,7 @@
             text-decoration: none;
             color: #555;
             transition: all .2s ease;
+            font-size: rem(14px);
             &:hover {
               color: $accent;
             }
@@ -30,5 +32,6 @@
   }
   &__copyright {
     color: #888;
+    font-weight: 300;
   }
 }
