Added markup and styles for breadcrumbs

--- a/src/pug/modules/header.pug
+++ b/src/pug/modules/header.pug
@@ -50,3 +50,4 @@ header.header
 									include ../icons/ic-cart
 								.header__cart-text Корзина
 	include ./main-search
+	include ./breadcrumbs
