--- a/src/static/scss/layout-parts/account-page.scss
+++ b/src/static/scss/layout-parts/account-page.scss
@@ -95,6 +95,7 @@
   .woocommerce-LostPassword {
     display: inline-block;
     margin-top: rem(15px);
+    color: $accent;
   }
   button[type="submit"] {
     margin-top: rem(25px);
