--- a/src/static/scss/main.scss
+++ b/src/static/scss/main.scss
@@ -6,6 +6,7 @@
 @import 'flex';
 
 @import './layout-parts/header';
+@import './layout-parts/breadcrumbs';
 @import './layout-parts/main-search';
 @import './layout-parts/product-card';
 @import './layout-parts/account-page';
